parser/langX.java
/* langX.java */
/* Generated By:JavaCC: Do not edit this line. langX.java */
package parser;

import java.io.*;
import recovery.*;
import syntacticTree.*;


public class langX implements langXConstants {
final static String Version = "X++ Compiler - Version 1.0 - 2004";
int contParseError = 0;
boolean debug_recovery;
Token lastError = null;



  public  static void main(String args[]) throws ParseException
  {
  boolean debug_as = false;
  boolean debug_recovery = false;

    String filename = ""; // nome do arquivo a ser analisado
    langX parser;     // analisador l�xico/sint�tico
    int i;
    boolean ms = false;

    System.out.println(Version);
    // l� os par�metros passados para o compilador
    for (i = 0; i < args.length - 1; i++)
    {
        if (args[i].equals("-debug_AS") )
            debug_as = true;
        else
        if (args[i].equals("-debug_recovery") )
            debug_recovery = true;
        else
        {
            System.out.println("Usage is: java langX [-debug_AS] " +
             "[-debug_recovery] inputfile");
            System.exit(0);
        }
    }

    if (args[i].equals("-"))
    {
        System.out.println("Reading from standard input . . .");
        parser = new langX(System.in); // cria AS
     }
     else
    {
        filename = args[args.length-1];
        System.out.println("Reading from file " + filename + " . . .");
        try {  // cria AS
            parser = new langX(new java.io.FileInputStream(filename));
        }
    catch (java.io.FileNotFoundException e) {
               System.out.println("File " + filename + " not found.");
        return;
        }
    }

    ListNode root = null;
    parser.debug_recovery = debug_recovery;
    if (! debug_as) parser.disable_tracing();
    try {
        root = parser.program();
    }
    catch (ParseEOFException e)
    {
    System.err.println(e.getMessage());
    }
    finally {
        System.out.println(parser.token_source.foundLexError() +
                                " Lexical Errors found");
        System.out.println(parser.contParseError + " Syntactic Errors found");
     }

}  // main

static public String im(int x)
{
int k;
String s;
   s = tokenImage[x];
   k = s.lastIndexOf("\u005c"");
   try {s = s.substring(1,k);}
   catch (StringIndexOutOfBoundsException e)
   {}
   return s;
}


boolean eof;    // vari�vel que indica se EOF foi alcan�ado
// o m�todo abaixo consome tokens at� alcan�ar um que perten�a ao conjunto
// de sincroniza��o

void consumeUntil(RecoverySet g,
                 ParseException e,
                 String met) throws ParseEOFException,
                                    ParseException
{
Token tok;

   if ( debug_recovery) // informa��o sobre a recupera��o
   {
       System.out.println();
       System.out.println("*** " + met + " ***");
       System.out.println("     Syncronizing Set: " + g);
   }

   if (g == null) throw e; // se o conjunto � null, propaga a exce��o

   tok = getToken(1); // pega token corrente
   while ( ! eof )  // se n�o chegou ao fim do arquivo
   {
        if ( g.contains(tok.kind ) ) //achou um token no conjunto
        {
             if ( debug_recovery)
               System.out.println("     Found syncronizing token: " +
                                   im(tok.kind));
             break;
        }
        if (debug_recovery)
             System.out.println("     Ignoring token: " + im(tok.kind));
        getNextToken();     // pega pr�ximo token
        tok = getToken(1);
        if (tok.kind == EOF && ! g.contains(EOF) ) // fim da entrada?
            eof = true;
    }
   if ( tok != lastError)
   {
        System.out.println(e.getMessage());
        lastError = tok;
        contParseError++;  // incrementa n�mero de erros
   }
   if ( eof ) throw new ParseEOFException("EOF found prematurely.");
}

  final public ListNode program() throws ParseException, ParseEOFException {
    trace_call("program");
    try {RecoverySet g = First.program;

ListNode l = null, d = null;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 0:{
        jj_consume_token(0);
{if ("" != null) return null;}
        break;
        }
      case CLASS:{
        l = classlist(g);
        try {
          jj_consume_token(0);
{if ("" != null) return l;}
        } catch (ParseException e) {
consumeUntil(g, e, "program");
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 0:
        case CLASS:{
          d = program();
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          ;
        }
{if ("" != null) return l;}
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("program");
    }
  }

  final public ListNode classlist(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classlist");
    try {ClassDeclNode c = null;
ListNode l = null;

RecoverySet f = First.classlist.union(g);
      c = classdecl(f);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        l = classlist(g);
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        ;
      }
{if ("" != null) return new ListNode(c, l);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("classlist");
    }
  }

  final public ClassDeclNode classdecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classdecl");
    try {Token t = null, n = null, e1 = null;
ClassBodyNode c = null;
      try {
        t = jj_consume_token(CLASS);
        n = jj_consume_token(IDENT);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case EXTENDS:{
          jj_consume_token(EXTENDS);
          e1 = jj_consume_token(IDENT);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        c = classbody(g);
{if ("" != null) return new ClassDeclNode(t, n, e1, c);}
      } catch (ParseException e) {
consumeUntil(g, e, "classdecl");
    {if ("" != null) return new ClassDeclNode(t, n, e1, c);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("classdecl");
    }
  }

  final public ClassBodyNode classbody(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classbody");
    try {ListNode c = null,
         v = null,
         ct = null,
         m = null;
VarDeclNode vd;
ConstructDeclNode cd;
MethodDeclNode md;
Token t = null;

RecoverySet f2 = new RecoverySet(SEMICOLON).union(g).remove(IDENT),
            f3 = First.methoddecl.union(g).remove(IDENT),
            f4 = First.constructdecl.union(f3).remove(IDENT),
            f5 = First.vardecl.union(f4).remove(IDENT);
      try {
        t = jj_consume_token(LBRACE);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CLASS:{
          c = classlist(f5);
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        label_1:
        while (true) {
          if (jj_2_1(3)) {
            ;
          } else {
            break label_1;
          }
          vd = vardecl(f2);
          jj_consume_token(SEMICOLON);
if ( v == null)
              v = new ListNode(vd);
          else
              v.add(vd);
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case CONSTRUCTOR:{
            ;
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            break label_2;
          }
          cd = constructdecl(f4);
if ( ct == null)
              ct = new ListNode(cd);
          else
              ct.add(cd);
        }
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:
          case STRING:
          case CHAR:
          case BOOLEAN:
          case DOUBLE:
          case IDENT:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_3;
          }
          md = methoddecl(f3);
if ( m == null)
              m = new ListNode(md);
          else
              m.add(md);
        }
        jj_consume_token(RBRACE);
{if ("" != null) return new ClassBodyNode(t, c, v, ct, m);}
      } catch (ParseException e) {
consumeUntil(g, e, "classbody");
   {if ("" != null) return new ClassBodyNode(t, c, v, ct, m);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("classbody");
    }
  }

  final public VarDeclNode vardecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("vardecl");
    try {Token t1 = null, t2;
int k = 0;
ListNode l = null;
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:{
          t1 = jj_consume_token(INT);
          break;
          }
        case STRING:{
          t1 = jj_consume_token(STRING);
          break;
          }
        case DOUBLE:{
          t1 = jj_consume_token(DOUBLE);
          break;
          }
        case BOOLEAN:{
          t1 = jj_consume_token(BOOLEAN);
          break;
          }
        case CHAR:{
          t1 = jj_consume_token(CHAR);
          break;
          }
        case IDENT:{
          t1 = jj_consume_token(IDENT);
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t2 = jj_consume_token(IDENT);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACKET:{
            ;
            break;
            }
          default:
            jj_la1[8] = jj_gen;
            break label_4;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
k++;
        }
l = new ListNode(new VarNode(t2, k));
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[9] = jj_gen;
            break label_5;
          }
          jj_consume_token(COMMA);
k = 0;
          t2 = jj_consume_token(IDENT);
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case LBRACKET:{
              ;
              break;
              }
            default:
              jj_la1[10] = jj_gen;
              break label_6;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
k++;
          }
l.add(new VarNode(t2, k));
        }
{if ("" != null) return new VarDeclNode(t1, l);}
      } catch (ParseException e) {
consumeUntil(g, e, "vardecl");
   {if ("" != null) return new VarDeclNode(t1, l);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("vardecl");
    }
  }

  final public ConstructDeclNode constructdecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("constructdecl");
    try {Token t = null;
MethodBodyNode m = null;
      try {
        t = jj_consume_token(CONSTRUCTOR);
        m = methodbody(g);
{if ("" != null) return new ConstructDeclNode(t, m);}
      } catch (ParseException e) {
consumeUntil(g, e, "constructdecl");
   {if ("" != null) return new ConstructDeclNode(t, m);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("constructdecl");
    }
  }

  final public MethodDeclNode methoddecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("methoddecl");
    try {Token t1 = null,
      t2 = null;
int k = 0;
MethodBodyNode m = null;
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case BOOLEAN:{
          t1 = jj_consume_token(BOOLEAN);
          break;
          }
        case DOUBLE:{
          t1 = jj_consume_token(DOUBLE);
          break;
          }
        case CHAR:{
          t1 = jj_consume_token(CHAR);
          break;
          }
        case INT:{
          t1 = jj_consume_token(INT);
          break;
          }
        case STRING:{
          t1 = jj_consume_token(STRING);
          break;
          }
        case IDENT:{
          t1 = jj_consume_token(IDENT);
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case LBRACKET:{
            ;
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            break label_7;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
k++;
        }
        t2 = jj_consume_token(IDENT);
        m = methodbody(g);
{if ("" != null) return new MethodDeclNode(t1, k, t2, m);}
      } catch (ParseException e) {
consumeUntil(g, e, "methoddecl");
   {if ("" != null) return new MethodDeclNode(t1, k, t2, m);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("methoddecl");
    }
  }

  final public MethodBodyNode methodbody(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("methodbody");
    try {Token t1 = null;
ListNode l = null;
StatementNode s = null;

RecoverySet f = new RecoverySet(RPAREN).union(g);
      try {
        t1 = jj_consume_token(LPAREN);
        l = paramlist(f);
        jj_consume_token(RPAREN);
        s = statement(g);
{if ("" != null) return new MethodBodyNode(t1, l, s);}
      } catch (ParseException e) {
consumeUntil(g, e, "methodbody");
   {if ("" != null) return new MethodBodyNode(t1, l, s);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("methodbody");
    }
  }

  final public ListNode paramlist(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("paramlist");
    try {ListNode p = null, q = null;
int k = 0;
Token t1 = null;
Token t2 = null;
      try {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case STRING:
        case CHAR:
        case BOOLEAN:
        case DOUBLE:
        case IDENT:{
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:{
            t1 = jj_consume_token(INT);
            break;
            }
          case STRING:{
            t1 = jj_consume_token(STRING);
            break;
            }
          case BOOLEAN:{
            t1 = jj_consume_token(BOOLEAN);
            break;
            }
          case CHAR:{
            t1 = jj_consume_token(CHAR);
            break;
            }
          case DOUBLE:{
            t1 = jj_consume_token(DOUBLE);
            break;
            }
          case IDENT:{
            t1 = jj_consume_token(IDENT);
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          t2 = jj_consume_token(IDENT);
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case LBRACKET:{
              ;
              break;
              }
            default:
              jj_la1[14] = jj_gen;
              break label_8;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
k++;
          }
q = new ListNode(new VarNode(t2, k));
     p = new ListNode(new VarDeclNode(t1, q));
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case COMMA:{
              ;
              break;
              }
            default:
              jj_la1[15] = jj_gen;
              break label_9;
            }
            jj_consume_token(COMMA);
k = 0;
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
            case INT:{
              t1 = jj_consume_token(INT);
              break;
              }
            case STRING:{
              t1 = jj_consume_token(STRING);
              break;
              }
            case BOOLEAN:{
              t1 = jj_consume_token(BOOLEAN);
              break;
              }
            case CHAR:{
              t1 = jj_consume_token(CHAR);
              break;
              }
            case DOUBLE:{
              t1 = jj_consume_token(DOUBLE);
              break;
              }
            case IDENT:{
              t1 = jj_consume_token(IDENT);
              break;
              }
            default:
              jj_la1[16] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            t2 = jj_consume_token(IDENT);
            label_10:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case LBRACKET:{
                ;
                break;
                }
              default:
                jj_la1[17] = jj_gen;
                break label_10;
              }
              jj_consume_token(LBRACKET);
              jj_consume_token(RBRACKET);
k ++;
            }
q = new ListNode(new VarNode(t2, k));
         p.add(new VarDeclNode(t1, q));
          }
          break;
          }
        default:
          jj_la1[18] = jj_gen;
          ;
        }
{if ("" != null) return p;}
      } catch (ParseException e) {
consumeUntil(g, e, "paramlist");
   {if ("" != null) return null;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramlist");
    }
  }

  final public StatementNode statement(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("statement");
    try {StatementNode s = null;
ListNode l;
Token t1 = null;
